--- a/component/Header/Header.module.scss
+++ b/component/Header/Header.module.scss
@@ -1,4 +1,17 @@
-// ロゴ
-.logo {
-  color: aliceblue;
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  background-color: rgba(0, 0, 0, 0);
+  width: 100vw;
+  .header__inner {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0);
+  }
 }
