--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,18 @@
 .container {
-  padding: 0 2rem;
+  width: calc(100vw - 2rem);
+  margin: 0 auto;
+}
+.container__box {
+  margin-right: 2rem;
+  margin-left: 2rem;
+  /* width: 98vw; */
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  /* padding: 4rem 0; */
+  width: calc(100vh - 2rem);
+  margin: 0 auto;
   flex: 1;
   display: flex;
   flex-direction: column;
