--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -1,7 +1,7 @@
 .button {
   height: 50px;
   width: 50px;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   border: none;
   display: flex;
   justify-content: center;
@@ -9,6 +9,9 @@
   cursor: pointer;
   position: absolute;
   right: 1rem;
+  &.primary {
+    background-color: rgb(154, 9, 9);
+  }
 }
 .button__inner {
   display: flex;
@@ -20,7 +23,7 @@
 }
 .button__inner__line {
   transition: ease 0.4s;
-  background: #fff;
+  background: rgb(255, 255, 255);
   width: 30px;
   height: 2px;
 }
@@ -32,14 +35,22 @@
   padding: 1em 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
+  transition: ease 0.6s;
+
+  &:hover {
+    background-color: rgb(212, 211, 211);
+  }
 }
 
 // アクティブ
+.button.primary {
+  background-color: rgb(154, 9, 9);
+}
 .hamburger__nav {
   position: fixed;
   right: 0;
   bottom: 0;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.9);
   opacity: 1;
   color: black;
   z-index: 99;
