--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -49,7 +49,8 @@
 .hamburger__nav {
   position: fixed;
   right: 0;
-  bottom: 0;
+  // bottom: 0;
+  top: 50px;
   background-color: rgba(255, 255, 255, 0.9);
   opacity: 1;
   color: black;
