--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -9,6 +9,11 @@
   cursor: pointer;
   position: absolute;
   right: 1rem;
+  &:hover {
+    .button__inner__line {
+      background-color: rgb(255, 190, 190);
+    }
+  }
 }
 .button__inner {
   display: flex;
@@ -51,6 +56,11 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    &:hover {
+      .closeButton__inner__line {
+        background: rgb(155, 8, 8);
+      }
+    }
     .closeButton__inner__line {
       transition: ease 0.4s;
       background: rgb(130, 130, 130);
@@ -62,7 +72,6 @@
       top: 25px;
       transform: rotate(45deg);
     }
-
     .closeButton__inner__line:nth-child(2) {
       position: absolute;
       top: 25px;
@@ -71,10 +80,6 @@
   }
 }
 
-// アクティブ
-.button.primary {
-  background-color: rgb(154, 9, 9);
-}
 .hamburger__nav {
   position: fixed;
   right: 0;
