--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -83,12 +83,11 @@
 .hamburger__nav {
   position: fixed;
   right: 0;
-  // bottom: 0;
-  top: 50px;
+  top: 0;
   background-color: rgba(255, 255, 255, 0.9);
   opacity: 1;
   color: black;
-  z-index: 99;
+  z-index: 1000;
   transform: translateX(100%);
   transition: ease 0.6s;
   overflow: auto;
