--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -1,3 +1,4 @@
+// ボタン本体
 .button {
   height: 50px;
   width: 50px;
@@ -30,6 +31,27 @@
   height: 2px;
 }
 
+// リスト関係
+.hamburger__nav {
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  opacity: 1;
+  color: black;
+  z-index: 1000;
+  transform: translateX(100%);
+  transition: ease 0.6s;
+  overflow: auto;
+  height: 100vh;
+  width: 50vw;
+}
+
+.hamburger__nav.hamburger__opened {
+  transform: translateX(0);
+  opacity: 1;
+}
+
 .opened__li {
   font-size: 2em;
   font-weight: bold;
@@ -38,13 +60,13 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
   transition: ease 0.6s;
-
   &:hover {
     background-color: rgb(212, 211, 211);
   }
 }
+
+// 閉じるボタン
 .opened__li__button {
-  // background-color: aqua;
   height: 50px;
   display: flex;
   flex-direction: row;
@@ -58,6 +80,7 @@
     cursor: pointer;
     &:hover {
       .closeButton__inner__line {
+        // この色は差し色にする色
         background: rgb(155, 8, 8);
       }
     }
@@ -80,22 +103,9 @@
   }
 }
 
-.hamburger__nav {
-  position: fixed;
-  right: 0;
-  top: 0;
-  background-color: rgba(255, 255, 255, 0.9);
-  opacity: 1;
-  color: black;
-  z-index: 1000;
-  transform: translateX(100%);
-  transition: ease 0.6s;
-  overflow: auto;
-  height: 100vh;
-  width: 50vw;
-}
-
-.hamburger__nav.hamburger__opened {
-  transform: translateX(0);
-  opacity: 1;
+// PC対応
+@media screen and (min-width: 768px) {
+  .hamburger__nav {
+    width: 50em;
+  }
 }
