差し色とか変更

--- a/component/Footer/Footer.module.scss
+++ b/component/Footer/Footer.module.scss
@@ -3,8 +3,8 @@
   // bottom: 0;
   height: 70px;
   width: 100vw;
-  background-color: rgba(86, 85, 85, 0.5);
-  color: white;
+  background-color: rgba(86, 85, 85, 0.25);
+  color: rgb(255, 255, 100);
   // padding-left: 2rem;
   display: flex;
   justify-content: center;
