--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -12,7 +12,7 @@
   right: 1rem;
   &:hover {
     .button__inner__line {
-      background-color: rgb(255, 190, 190);
+      background-color: rgb(255, 255, 100);
     }
   }
 }
@@ -61,7 +61,8 @@
   text-transform: uppercase;
   transition: ease 0.6s;
   &:hover {
-    background-color: rgb(212, 211, 211);
+    background-color: rgb(255, 255, 100);
+    padding-left: 2em;
   }
 }
 
@@ -102,10 +103,47 @@
     }
   }
 }
+.headerNav__pc {
+  display: none;
+}
 
 // PC対応
 @media screen and (min-width: 768px) {
   .hamburger__nav {
     width: 50em;
+  }
+  .button {
+    display: none;
+  }
+  .headerNav__pc {
+    display: block;
+    min-width: 50vw;
+    max-width: 600px;
+    height: 100%;
+    text-align: center;
+  }
+  .headerNav__ul__pc {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+    transition: ease 0.6s;
+  }
+  .headerNav__li__pc {
+    transition: ease 0.6s;
+
+    color: white;
+    font-weight: bold;
+    // background-color: red;
+    display: block;
+    padding: 1em;
+
+    margin-right: 2em;
+    font-size: 3em;
+    text-transform: uppercase;
+    cursor: pointer;
+    &:hover {
+      color: rgb(255, 255, 100);
+    }
   }
 }
