--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,16 +1,24 @@
+.body {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
 .container {
   width: calc(100vw - 2rem);
   margin: 0 auto;
+  min-height: 100vh;
 }
 .container__box {
   margin-right: 2rem;
   margin-left: 2rem;
   /* width: 98vw; */
+  min-height: calc(100vh - 50px);
 }
 
 .main {
   min-height: 100vh;
-  /* padding: 4rem 0; */
+  padding: 4rem 0;
   width: calc(100vh - 2rem);
   margin: 0 auto;
   flex: 1;
@@ -18,6 +26,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex: 1;
 }
 
 .footer {
