--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -12,7 +12,7 @@
   right: 1rem;
   &:hover {
     .button__inner__line {
-      background-color: rgb(255, 255, 100);
+      background-color: rgba(255, 255, 100, 0.3);
     }
   }
 }
