--- a/styles/globals.css
+++ b/styles/globals.css
@@ -162,6 +162,11 @@ body {
   background-color: black;
   font-size: 62.5%;
 }
+body {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
 
 a {
   color: inherit;
