--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -1,18 +1,22 @@
 // ボタン本体
+$length: 40px;
+// .parent {
+//   background-color: red;
+// }
 .button {
-  height: 50px;
-  width: 50px;
+  height: $length;
+  width: $length;
   background-color: rgb(0, 0, 0);
   border: none;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  position: absolute;
-  right: 1rem;
+  margin-right: 1em;
+
   &:hover {
     .button__inner__line {
-      background-color: rgba(255, 255, 100, 0.3);
+      background-color: rgb(255, 255, 100);
     }
   }
 }
@@ -27,7 +31,7 @@
 .button__inner__line {
   transition: ease 0.4s;
   background: rgb(255, 255, 255);
-  width: 30px;
+  width: calc($length * 0.6);
   height: 2px;
 }
 
@@ -54,7 +58,8 @@
 
 .opened__li {
   font-size: 2em;
-  font-weight: bold;
+  letter-spacing: 0.2em;
+  // font-weight: bold;
   margin: 0 auto;
   padding: 1em 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
