--- a/component/Header/Header.module.scss
+++ b/component/Header/Header.module.scss
@@ -7,11 +7,13 @@
   height: 60px;
   background-color: rgba(0, 0, 0, 0.4);
   width: 100vw;
+
   .header__inner {
     width: 100%;
     height: 50px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: rgba(0, 0, 0, 0);
   }
 }
