--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,9 @@
+.art {
+  font-family: futura-pt, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
 .body {
   display: flex;
   flex-flow: column;
