--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -61,13 +61,19 @@ $length: 40px;
   letter-spacing: 0.2em;
   // font-weight: bold;
   margin: 0 auto;
-  padding: 1em 20px;
+  // padding: 1em 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
   transition: ease 0.6s;
   &:hover {
     background-color: rgb(255, 255, 100);
     padding-left: 2em;
+  }
+  .opened__li__List {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 1em 20px;
   }
 }
 
