--- a/component/Works/Works.module.scss
+++ b/component/Works/Works.module.scss
@@ -1,6 +1,13 @@
-.topMain {
+.Works {
   // margin-left: 2rem;
   // background-color: rgba(0, 255, 255, 0.2);
   // height: 100vh;
   margin: 0 auto;
+  padding-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .Works {
+    padding-top: 50px;
+  }
 }
