--- a/component/Hamburger/Hamburger.module.scss
+++ b/component/Hamburger/Hamburger.module.scss
@@ -7,6 +7,8 @@ $length: 40px;
 .button {
   height: $length;
   width: $length;
+  margin-top: calc((50px - $length) / 2);
+  margin-bottom: calc((50px - $length) / 2);
   background-color: rgb(0, 0, 0);
   border: none;
   display: flex;
