--- a/component/ProductContainer/ProductContainer.module.scss
+++ b/component/ProductContainer/ProductContainer.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 2em 3em;
+  margin: 10px 3em;
   .image {
     object-fit: cover;
     transition: ease 0.3s;
@@ -20,10 +20,10 @@
   }
   .productText {
     max-width: 500px;
-    height: 10em;
-    padding-top: 1em;
-    padding-bottom: 2em;
-    padding-left: 1em;
+    // height: 7em;
+    padding-top: 0.3em;
+    padding-bottom: 1em;
+    padding-left: 0.5em;
     font-size: 3em;
     .productText__title {
       font-size: 1.6em;
@@ -42,6 +42,9 @@
 @media screen and (min-width: 600px) {
   .productContainer {
     width: calc(100% - 40px) / 2;
+    .productText {
+      height: 7em;
+    }
   }
 }
 
