--- a/component/DetailImageContainer/DetailImageContainer.module.scss
+++ b/component/DetailImageContainer/DetailImageContainer.module.scss
@@ -1,25 +1,9 @@
 .detailImageContainer {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 @media screen and (min-width: 768px) {
   .detailImageContainer {
     padding-top: 0;
   }
 }
-
-// .mainImageArea {
-//   background-color: rgba(255, 0, 0, 0.3);
-//   width: 100%;
-//   padding: 3em 0;
-// }
-
-// .subImageArea {
-//   height: 20vh;
-//   background-color: rgba(0, 0, 255, 0.3);
-//   display: flex;
-//   flex-wrap: nowrap;
-//   align-items: center;
-//   padding: 3em 2em;
-//   margin-bottom: 50px;
-// }
