--- a/component/ProductLayout/ProductLayout.module.scss
+++ b/component/ProductLayout/ProductLayout.module.scss
@@ -27,15 +27,15 @@ $width: 65vw;
   flex-direction: column;
 
   .product {
-    padding-left: 3em;
+    // padding-left: 3em;
     // background-color: red;
     @media screen and (max-width: 767px) {
       display: flex;
-      // justify-content: space-around;
+      justify-content: center;
     }
     // display: flex;
     .product__title {
-      font-size: 7em;
+      font-size: 9vw;
       // text-align: center;
       text-transform: uppercase;
       color: rgb(255, 255, 100);
@@ -53,7 +53,7 @@ $width: 65vw;
       }
       .product__price {
         display: inline;
-        font-size: 5em;
+        font-size: 7vw;
         border-bottom: 1px solid white;
         // text-decoration: underline;
         // border-width: 1px;
@@ -62,6 +62,10 @@ $width: 65vw;
   }
 }
 // }
+.contact {
+  color: aliceblue;
+  padding-left: 3em;
+}
 
 @media screen and (min-width: 768px) {
   .productLayout {
